package eu.telecomnancy.profrdv.model;

public class Ecole {
    private String nom;

    public Ecole(String nom) {

    }

    public String getNom() {
        return this.nom;
    }
}
