package eu.telecomnancy.profrdv.Model;

public class Disponibilite {
}
